--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "react-autocomplete-hint": "^1.3.0",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0",
