--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "moment": "^2.29.1",
@@ -17,6 +18,7 @@
     "react-autocomplete-hint": "^1.3.0",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-image-file-resizer": "^0.4.7",
     "react-redux": "^7.2.6",
     "redux": "^4.1.1"
