--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-icons": "^4.3.1",
     "react-image-file-resizer": "^0.4.7",
     "react-redux": "^7.2.6",
+    "react-speech": "^1.0.2",
+    "react-speech-kit": "^3.0.1",
     "redux": "^4.1.1"
   },
   "devDependencies": {
